--- a/course_797_extensions.refined.json
+++ b/course_797_extensions.refined.json
@@ -2747,7 +2747,7 @@
           }
         ],
         "name": {
-          "source": "Okinawa Waves",
+          "source": "Okinawa Days",
           "target": "沖縄の波",
           "romanization": "okinawa no nami"
         },
